changed font, fixed horizontal overflow caused by lack of container as parent of rows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /*--------------------------------------------Colors*/
 
@@ -37,11 +37,19 @@ footer p {
 
 /*--------------------------------------------Margins/Paddings*/
 
+body {
+    font-family: "Montseerat",sans-serif;
+}
+
 .col-4 {
     padding: 0;
 }
 
 .col-sm-1 {
+    padding: 0;
+}
+
+.col-sm-4 {
     padding: 0;
 }
 
@@ -78,10 +86,10 @@ footer p {
 .banner {
     background: url("/assets/images/akyurt.jpg");
     background-size: auto;
-    height: 70vh;
+    height: 50vh;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
 }
 
 .layer {
@@ -89,16 +97,16 @@ footer p {
 }
 
 .welcome {
-    font-family: "Tangerine",sans-serif;
-    font-size: 100px;
+    font-family: "Philosopher",sans-serif;
+    font-size: 80px;
     text-align: center;
-    padding-top: 180px;
-    font-weight: 700;
+    padding-top: 130px;
+    font-weight: 400;
 }
 
 @media (max-width:1000px) {
     .welcome {
-        font-family: "Tangerine",sans-serif;
+        font-family: "Philosopher",sans-serif;
         font-size: 50px;
         text-align: center;
     }
@@ -119,22 +127,39 @@ footer p {
 .feature {
     text-align: center;
     min-height: 30vh;
-    padding-top: 10%;
+    padding-top: 5%;
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 5%;
 }
 
 .feature h5 {
-    font-family: "Tangerine",sans-serif;
+    font-family: "Philosopher",sans-serif;
     font-size: 30px;
 }
 
-.features .treatments, .features .facilities, .features .team {
+.treatments, .facilities, .team {
     background-color: rgba(182, 60, 60, 0.3);
     margin: 2.5%;
 }
 
+.treatments {
+    margin-left: 5%;
+}
+
+.team {
+    margin-right: 5%;
+}
+
+
+
+.btn-feature {
+    margin-top: 30px;
+}
+
+.features {
+    margin-bottom: 50px;
+}
 
 
 
@@ -146,11 +171,12 @@ footer p {
     height: auto;
     margin-left: 2.5%;
     margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 .quotes h4 {
-    font-family: "Tangerine",sans-serif;
-    font-size: 40px;
+    font-family: "Philosopher",sans-serif;
+    font-size: 35px;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -166,8 +192,9 @@ footer p {
     padding-right: 10%;
 }
 
-.quote .author {
+.author {
     text-align: right;
+    color: rgb(82, 82, 82);
 }
 
 .quotes .quote-icon i {
@@ -186,10 +213,16 @@ footer p {
     padding-top: 30px;
 }
 
+
 /*--------------------------------------------Footer*/
 
 footer {
     height: auto;
+}
+
+.footer-heading {
+    font-family: "Philosopher", sans-serif;
+    font-size: 25px;
 }
 
 .address, .contacts, .social {
@@ -206,8 +239,4 @@ footer {
     text-align: center;
     color: rgb(245, 245, 245);
     background: #7e0000;
-}
-
-.footer-heading {
-    font-weight: 700;
 }
